--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,12 +20,14 @@ jobs:
     steps:
       - uses: ahaoboy/easy-setup@v1
         with:
-          url: |-
-            https://github.com/ahaoboy/easy-install/raw/refs/heads/main/dist-manifest/llrt.json
-            https://github.com/ahaoboy/txiki.js-build
-            https://github.com/ahaoboy/easy-install/raw/refs/heads/main/dist-manifest/quickjs-ng.json
+          url: https://github.com/ahaoboy/easy-install
+
       - name: test
         run: |
+          ei https://github.com/ahaoboy/txiki.js-build
+          ei https://github.com/ahaoboy/easy-install/raw/refs/heads/main/dist-manifest/llrt.json
+          ei https://github.com/ahaoboy/easy-install/raw/refs/heads/main/dist-manifest/quickjs-ng.json
+
           which qjs
           which llrt
           which tjs
@@ -34,7 +36,3 @@ jobs:
           qjs a.js
           llrt a.js
           tjs run a.js
-
-          qjs --help
-          llrt --version
-          tjs --version
